<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker_title">Playlist maker</string>
    <string name="search_button_text">Поиск</string>
    <string name="media_library_button_text">Медиатека</string>
    <string name="settings_button_text">Настройки</string>
    <string name="medialab_button_text">Медиатека</string>
    <string name="back_button_text">Назад</string>
    <string name="dark_theme_button_text">Темная тема</string>
    <string name="share_app_button_text">Поделиться приложением</string>
    <string name="support_button_text">Написать в поддержку</string>
    <string name="agreement_button_text">Пользовательское соглашение</string>
    <string name="history_search">История поиска</string>

    <string name="developer_email">bagdanova.renata@gmail.com</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="adress_practicum">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_app">Поделиться приложением через</string>
    <string name="clean_history">Очистить историю</string>

    <string name="link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="input_hint">Поиск</string>

    <string name="save">Сохранить</string>

    <string name="edit_playlist">Редактировать</string>

    <string name="empty_playlist_message">В этом плейлисте пока нет треков</string>

    <string name="clear_input">Очистить</string>

    <string name="text_empty">Ничего не нашлось</string>

    <string name="time">Длительность</string>

    <string name="album">Альбом</string>

    <string name="year">Год</string>

    <string name="genre">Жанр</string>

    <string name="country">Страна</string>

    <string name="network_error_message">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>

    <string name="text_error">Ошибка соединения</string>

    <string name="text_enthernet">Загрузка не удалась. Проверьте подключение к интернету</string>

    <string name="text_retry">Обновить</string>
    <string name="text_time">0:30</string>
    <string name="text_track">Yesterday (Remastered 2009)</string>

    <string name="empty_medialab">Ваша медиатека пуста</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlist">Вы не создали ни одного плейлиста</string>
    <string name="title">Название*</string>
    <string name="about">Описание</string>
    <string name="create">Создать</string>
    <string name="text">Текст</string>
    <string name="add_to_album">Добавить в плейлист</string>
    <string name="new_album">Новый плейлист</string>
</resources>