<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.fragments.SettingsFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/text_back"
        style="@style/primary_settings_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margine_track"
        android:layout_marginTop="@dimen/time_size"
        android:text="@string/settings_button_text"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/primary_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_padding"
        android:background="@android:color/transparent"
        android:checked="true"
        android:forceDarkAllowed="false"
        android:linksClickable="false"
        android:longClickable="false"
        android:paddingLeft="@dimen/button_corner_radius"
        android:text="@string/dark_theme_button_text"
        app:icon="@drawable/baseline_toggle_off_24" />

    <Button
        android:paddingLeft="@dimen/button_corner_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_share_settings"
        android:text="@string/share_app_button_text"
        app:icon="@drawable/baseline_share_24"
        style="@style/primary_settings_button"
        android:background="@android:color/transparent"/>

    <Button
        android:paddingLeft="@dimen/button_corner_radius"
        android:id="@+id/support_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_button_text"
        app:icon="@drawable/baseline_support_agent_24"
        style="@style/primary_settings_button"
        android:background="@android:color/transparent"/>

    <Button
        android:paddingLeft="@dimen/button_corner_radius"
        android:id="@+id/link_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreement_button_text"
        app:icon="@drawable/baseline_arrow_forward_ios_24"
        style="@style/primary_settings_button"
        android:background="@android:color/transparent"/>

</LinearLayout>