<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaFragment">

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.example.playlistmaker.presentation.ui.fragments.MediaLibraryFragment"
        android:label="@string/media_library_button_text" >
        <action
            android:id="@+id/action_mediaFragment_to_newPlaylistFragment"
            app:destination="@id/newPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.presentation.ui.fragments.SearchFragment"
        android:label="@string/search_button_text" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.presentation.ui.fragments.SettingsFragment"
        android:label="@string/settings_button_text" />

    <fragment
        android:id="@+id/track_player"
        android:name="com.example.playlistmaker.presentation.ui.fragments.TrackPlayerFragment"
        android:label="Player" />
    <fragment
        android:id="@+id/newPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.ui.activities.NewPlaylistFragment"
        android:label="NewPlaylistFragment" >
        <action
            android:id="@+id/action_newPlaylistFragment_to_mediaFragment"
            app:destination="@id/mediaFragment" />
    </fragment>


</navigation>