<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    android:background="@color/dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/zero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background='@android:color/transparent'
            android:layout_gravity="start"
            android:text="@string/back_button_text"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background='@android:color/transparent'
            android:gravity="start"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/zero"
            android:text="@string/dark_theme_button_text"
            android:textSize="@dimen/button_corner_radius"
            android:textColor="@color/white"
            app:icon="@drawable/control"
            app:iconTint="@color/white"
            app:iconGravity="end"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background='@android:color/transparent'
            android:gravity="start"
            app:cornerRadius="@dimen/zero"
            android:text="@string/share_app_button_text"
            android:textSize="@dimen/button_corner_radius"
            android:textColor="@color/white"
            app:icon="@drawable/share"
            app:iconTint="@color/white"
            app:iconGravity="end"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background='@android:color/transparent'
            android:gravity="start"
            app:cornerRadius="@dimen/zero"
            android:text="@string/support_button_text"
            android:textSize="@dimen/button_corner_radius"
            android:textColor="@color/white"
            app:icon="@drawable/support"
            app:iconTint="@color/white"
            app:iconGravity="end"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background='@android:color/transparent'
            app:cornerRadius="@dimen/zero"
            android:text="@string/agreement_button_text"
            android:gravity="start"
            android:textSize="@dimen/button_corner_radius"
            android:textColor="@color/white"
            app:icon="@drawable/open"
            app:iconTint="@color/white"
            app:iconGravity="end"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>