<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    android:background="@color/blue"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/zero">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/playlist_maker_title"
            android:textColor="@color/white"
            android:textSize="@dimen/main_text_size"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:id="@+id/button1"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            android:text="@string/search_button_text"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/dark"
            app:icon="@drawable/searh"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:id="@+id/button2"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            android:text="@string/media_library_button_text"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/black"
            app:icon="@drawable/music"
            app:iconGravity="textStart"
            app:iconTint="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:id="@+id/button3"
            android:backgroundTint="@color/white"
            app:cornerRadius="@dimen/button_corner_radius"
            android:text="@string/settings_button_text"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/black"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>