<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    tools:context=".SettingsActivity"
    style="@style/Base.Theme.PlaylistMakerr"
    >


    <LinearLayout
        style="@style/Base.Theme.PlaylistMakerr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_back"
            app:strokeWidth="@dimen/zero"
            style="@style/primary_settings_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/radius"
            android:text="@string/search_button_text"
            app:icon="@drawable/baseline_arrow_back_24"
            android:background="@android:color/transparent"
            app:iconPadding="@dimen/small_padding"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/radius">

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:textColor="@color/black"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawablePadding="@dimen/radius"
                android:drawableTint="@color/rectangle_text_color"
                android:hint="@string/input_hint"
                android:textColorHint="@color/rectangle_text_color"
                android:inputType="text"
                android:padding="@dimen/radius"
                android:textCursorDrawable="@color/blue" />

            <ImageView
                android:id="@+id/clearIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/baseline_clear_24"
                android:visibility="gone"
                android:contentDescription="@string/clear_input"
                app:tint="@color/dark_grey"
                android:paddingEnd="@dimen/radius"/>
        </FrameLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>