<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/zero"
    android:background="@color/white_dark"
    android:id="@+id/new_playlist_container">

    <!-- Заголовок с кнопкой назад -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/f2">

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="@dimen/track_player_main_size"
            android:layout_height="@dimen/track_player_main_size"
            android:layout_marginStart="@dimen/margine_track"
            android:layout_marginTop="@dimen/margine_track"
            android:layout_marginBottom="@dimen/margine_track"
            android:background="@null"
            android:scaleType="fitCenter"
            android:tint="@color/dark_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist"
            android:textSize="@dimen/main_text_size"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/dark_white"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="@id/menu_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/menu_button"
            app:layout_constraintTop_toTopOf="@id/menu_button"
            android:layout_marginStart="@dimen/small_padding" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Кнопка добавления фото -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/add_picture_layout"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/t2">

        <ImageButton
            android:id="@+id/add_picture"
            android:layout_width="@dimen/picture"
            android:layout_height="@dimen/picture"
            android:background="@android:color/transparent"
            android:src="@drawable/add_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margine_track"
        android:paddingEnd="@dimen/margine_track"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/name_frame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/f6"
                android:layout_marginTop="@dimen/radius"
                android:background="@drawable/frame_border_grey"
                android:paddingStart="@dimen/margin_medium"
                android:paddingTop="@dimen/radius"
                android:paddingEnd="@dimen/margin_medium"
                android:paddingBottom="@dimen/radius"
                android:visibility="visible">

                <EditText
                    android:id="@+id/name_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/title"
                    android:padding="@dimen/zero"
                    android:textColor="@color/dark_white"
                    android:textColorHint="@color/grey" />

            </FrameLayout>

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/t2"
                android:background="@color/white_dark"
                android:fontFamily="@font/ys_display_medium"
                android:paddingLeft="@dimen/four"
                android:paddingRight="@dimen/four"
                android:text="@string/title"
                android:textColor="@color/dark_white"
                android:textSize="@dimen/o2"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_container">

            <FrameLayout
                android:id="@+id/description_frame"
                android:layout_width="match_parent"
                android:layout_height="@dimen/f6"
                android:background="@drawable/frame_border_grey"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:paddingTop="@dimen/radius"
                android:paddingBottom="@dimen/radius"
                android:layout_marginTop="@dimen/radius">

                <EditText
                    android:id="@+id/description_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/about"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/grey"
                    android:textColor="@color/dark_white"
                    android:inputType="textMultiLine"
                    android:gravity="center_vertical"
                    android:maxLines="5"
                    android:padding="@dimen/zero"/>

            </FrameLayout>

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/t2"
                android:background="@color/white_dark"
                android:fontFamily="@font/ys_display_medium"
                android:paddingLeft="@dimen/four"
                android:paddingRight="@dimen/four"
                android:text="@string/about"
                android:textColor="@color/grey"
                android:textSize="@dimen/o2"
                android:visibility="invisible" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/create_playlist_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_frame"
        android:padding="@dimen/margin_medium"
        android:layout_marginStart="@dimen/o7"
        android:layout_marginEnd="@dimen/o7"
        android:layout_marginBottom="@dimen/t2"
        android:clickable="false"
        android:focusable="false">

        <TextView
            android:id="@+id/create_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:gravity="center"
            android:textSize="@dimen/o6"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/white"
            android:layout_gravity="center" />

    </FrameLayout>

</LinearLayout>